--- a/Dev/pages/contact.html
+++ b/Dev/pages/contact.html
@@ -2,7 +2,7 @@
 
 <article class="contact" go-focus>
 
-    <form class="contact" action="api/contact.php" method="POST">
+    <!--<form class="contact" action="api/contact.php" method="POST">
         <h1>Me Contacter !</h1>
 
         <div class="message green">
@@ -15,7 +15,7 @@
         <textarea name="message" placeholder="Votre message !"></textarea>
 
         <input type="submit" value="Envoyer">
-    </form>
+    </form>-->
 
     <a href="mailto:Lebreton97480@gmail.com" >Lebreton97480@gmail.com</a>
 </article>
