--- a/dev/pages/a-propos.html
+++ b/dev/pages/a-propos.html
@@ -18,7 +18,6 @@
                 <p>J'ai connu un jeu vidéo !</p>
                 <h3>World Of Warcraft</h3>
                 <p>Avec ma curiosité à savoir comment le jeu a été fait !</p>
-                <p>Devenue passionné par tout ce qui touche à l'informatique depuis 2007 à l'âge de 12ans.</p>
             </div>
         </div>
        
@@ -28,13 +27,21 @@
             <div class="text">
                 <p>J'ai consulté des forums, temps jeune le "SiteDuZero", tuto vidéo sur YouTube.</p>
                 <h3>En autodidacte !</h3>
-                <p>Je suis de nombre youtubeurs comme Grafikart https://www.grafikart.fr/</p>
+                <p>Devenue passionné par tout ce qui touche à l'informatique.</p>
+
+                <div class="competence">
+                    <div class="progress"> Html </div>
+                    <div class="progress"> Css </div>
+                    <div class="progress"> Php </div>
+                    <div class="progress"> Csharp </div>
+                </div>
             </div>
         </div>
     
         <div class="box">
             <img src="images/twitch.jpg" data-parallax="0.3">
             <div class="text inverse">
+                <p>Je suis de nombre youtubeurs comme Grafikart https://www.grafikart.fr/</p>
                 <p>Je traine souvent sur la plateforme Twitch sous le pseudonyme.</p>
                 <h3>JeCodeLeSoir</h3>
             </div>
