Update contact.js, contact.html, and 2 more files...

--- a/prod/contact.html
+++ b/prod/contact.html
@@ -69,6 +69,21 @@
     <section class="content"> <!--Inclure header in html file -->
 
 <article class="contact" go-focus>
+
+    <form class="contact" action="https://formspree.io/f/xeqvzejj" method="POST">
+        <h1>Me Contacter !</h1>
+
+        <div class="message green">
+
+        </div>
+
+        <input type="email" name="email" placeholder="Votre Email">
+
+        <textarea name="message" placeholder="Votre message !"></textarea>
+
+        <input type="submit" value="Envoyer">
+    </form>
+
     <a href="mailto:Lebreton97480@gmail.com" >Lebreton97480@gmail.com</a>
 </article>
 
